Add prometheus client using poll with URL

--- a/Monitoring/python_script/Dockerfile
+++ b/Monitoring/python_script/Dockerfile
@@ -6,7 +6,7 @@ COPY requirements.txt /app/requirements.txt
 WORKDIR /app
 RUN pip install -r requirements.txt
 ENV HITL_URL $HITL_URL
-# CMD ["python3", "/app/py_hitl_exporter.py"]
+# CMD ["python3", "/app/py_http-poll-export.py"]
 CMD ["python3", "/app/py_http_export.py"]
 
 # docker build -t euiyoung/py-http-exporter .
