--- a/Monitoring/docker-compose.yml
+++ b/Monitoring/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   # docker run --name kibaba-run --network bridge -e "ELASTICSEARCH_URL=http://host.docker.internal:9209" -e "ES_JAVA_OPTS=-Xms1g -Xmx1g" -e "ELASTICSEARCH_HOSTS=http://host.docker.internal:9209" -p 5801:5601 docker.elastic.co/kibana/kibana:8.8.0
   # docker run --name es8-run --network bridge -p 9209:9200 -p 9114:9114 -p 9309:9300 -e "http.cors.enabled=true" -e "http.cors.allow-origin=\"*\"" -e "http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization" -e "http.cors.allow-credentials=true" -e "xpack.security.enabled=false" -e "discovery.type=single-node" -e "ES_JAVA_OPTS=-Xms2g -Xmx2g" docker.elastic.co/elasticsearch/elasticsearch:8.8.0
   # https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-node.html
-  elasticsearch:
+  elasticsearch_v_8:
     # image: docker.elastic.co/elasticsearch/elasticsearch:8.8.0
     #image: docker.elastic.co/elasticsearch/elasticsearch:6.8.15
     build:
@@ -63,6 +63,21 @@ services:
       - 9221:9200
     networks:
       - bridge
+  
+  kibana_v_8:
+    depends_on:
+      - elasticsearch
+    # image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+    image: docker.elastic.co/kibana/kibana:8.8.0
+    container_name: kibana
+    volumes:
+      - kibana-data:/usr/share/kibana/data
+    ports:
+    #  - ${KIBANA_PORT}:5601
+     - 15601:5601
+    restart: always
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch_v_8:9200
 
   # docker run -d -v "$PWD/solrdata:/var/solr" -p 8983:8983 --name solr-engine solr solr-precreate gettingstarted 
   # /opt/solr-9.3.0/contrib/prometheus-exporter/bin/solr-exporter -p 9854 -b http://host.docker.internal:8983/solr -f /opt/solr-9.3.0/contrib/prometheus-exporter/conf/solr-exporter-config.xml   
