Add Docker Instance for ES

--- a/Search-Engine/docker-compose.yml
+++ b/Search-Engine/docker-compose.yml
@@ -59,6 +59,7 @@ services:
         hard: -1
     volumes:
       - data01:/usr/share/elasticsearch/data
+      - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
     ports:
       - 9221:9200
     networks:
