--- a/Search-Engine/docker-compose.yml
+++ b/Search-Engine/docker-compose.yml
@@ -54,9 +54,10 @@ services:
         soft: -1
         hard: -1
     volumes:
+      - ./Docker/elasticsearch/backup:/usr/share/elasticsearch/backup
       - esdata0:/usr/share/elasticsearch/data
-      # - ${PROJECTS_DIR}/python-platform-engine/Search-Engine/Docker/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      - ${PROJECTS_DIR}/python-platform-engine/Search-Engine/Docker/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      # - ${PROJECTS_DIR}/python-platform-engine/Search-Engine/Docker/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ./Docker/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
     ports:
       - 9202:9200
     healthcheck:
