--- a/Monitoring/Curator/action_snapshot.yml
+++ b/Monitoring/Curator/action_snapshot.yml
@@ -10,8 +10,9 @@ actions:
     options:
       repository: my_backup
 
-    # Leaving name blank will result in the default 'curator-%Y%m%d%H%M%S'
-      name: test-index-%Y%m%d%H%M%S
+      # Leaving name blank will result in the default 'curator-%Y%m%d%H%M%S'
+      # name: test-index-%Y%m%d%H%M%S
+      name: test_index-%Y%m%d
       ignore_unavailable: False
       include_global_state: True
       partial: False
@@ -21,9 +22,10 @@ actions:
     filters:
     - filtertype: pattern
       kind: prefix
-      value: test-index-
+      value: test_index-
     - filtertype: age
-      source: creation_date
+      source: name
       direction: older
+      timestring: '%Y%m%d'
       unit: days
       unit_count: 1
