--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ RabbitMQ/.venv/
 Monitoring/Curator/.venv/
 Monitoring/Curator/debug.log
 Search-Engine/Docker/elasticsearch/backup/
-Frabric/.venv/
+Fabric/.venv/
