--- a/Search-Engine/Docker/elasticsearch/requirements.txt
+++ b/Search-Engine/Docker/elasticsearch/requirements.txt
@@ -1,2 +1,6 @@
-elasticsearch==8.8.0
+# elasticsearch==8.8.0
+elasticsearch==7.13.0
 pandas==2.2.0
+pymongo==4.6.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
