--- a/Search-Engine/docker-compose.yml
+++ b/Search-Engine/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - http.cors.allow-credentials=true
       - xpack.security.enabled=false    
       # - bootstrap.system_call_filter=false
+      - reindex.remote.whitelist=${NODE_WHITE_LIST}
     ulimits:
       memlock:
         soft: -1
