--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Monitoring/Curator/debug.log
 Search-Engine/Docker/elasticsearch/backup/
 Fabric/.venv/
 Search-Engine/Docker/elasticsearch/.venv/
+Search-Engine/prometheus/
