--- a/Monitoring/Cerebro/application.conf
+++ b/Monitoring/Cerebro/application.conf
@@ -75,12 +75,12 @@ hosts = [
 #   }
 #   Example of host with authentication
   {
+   host = "http://tsgvm00875:9200/"
+   name = "Dev Cluster"
+  },
+  {
    host = "http://tsgvm01362:9200/"
-   name = "tsgvm01362 Cluster"
-#    auth = {
-#      username = "admin"
-#      password = "admin"
-#    }
+   name = "ENV001 Prod Cluster"
   },
   {
    host = "http://host.docker.internal:9292"
