--- a/Search-Engine/docker-compose.yml
+++ b/Search-Engine/docker-compose.yml
@@ -98,6 +98,7 @@ services:
   prometheus:
     image: prom/prometheus
     container_name: prometheus
+    user: root
     restart: unless-stopped
     ports:
       - 9091:9090
