--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Search-Engine/Docker/elasticsearch/backup/
 Fabric/.venv/
 Search-Engine/Docker/elasticsearch/.venv/
 Search-Engine/prometheus/
+Search-Engine/Shell_Scripts/SSH/.venv/
