--- a/Apache-Kafka/docker-compose.yml
+++ b/Apache-Kafka/docker-compose.yml
@@ -33,8 +33,6 @@ services:
       POSTGRES_DB: postgres
     networks:
       - bridge
-    
-      
       
 
   zookeeper-1:
@@ -55,6 +53,31 @@ services:
   #   ports:
   #     - 32181:2181
   
+  connect-ui:
+    image: landoop/kafka-connect-ui
+    container_name: connect-ui
+    depends_on:
+      - kafka-connect
+    ports:
+      - 8100:8000
+    networks:
+      - bridge
+    environment:
+      - "CONNECT_URL=http://kafka-connect:8083"
+
+
+  Kafka-Connect-UI:
+    image: landoop/kafka-connect-ui
+    container_name: connect-ui
+    depends_on:
+      - kafka-connect
+    ports:
+      - 8101:8000
+    networks:
+      - bridge
+    environment:
+      - "CONNECT_URL=http://192.168.1.243:8083"
+
   kafka-connect:
     image: confluentinc/cp-kafka-connect:3.3.0
     hostname: connect
@@ -132,8 +155,10 @@ services:
   schema-registry:
     image: confluentinc/cp-schema-registry:3.2.0
     depends_on:
-    - kafka-1        
-    ports: ['28081:28081']
+      - kafka-1
+      - kafka-2      
+    ports: 
+      - 28081:28081
     environment:
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper-1:2181'
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
@@ -142,44 +167,7 @@ services:
     networks:
       - bridge
     
-  # kafka-confluent:
-  #   image: confluentinc/cp-kafka-connect:3.2.0
-  #   depends_on:
-  #   - zookeeper-1
-  #   ports: ['8083:8083']
-  #   # restart: always
-  #   environment:
-  #     CONNECT_BOOTSTRAP_SERVERS: 'kafka-1:9092'
-  #     CONNECT_REST_ADVERTISED_HOST_NAME: connect
-  #     # CONNECT_REST_PORT: 8083
-  #     CONNECT_GROUP_ID: compose-connect-group
-  #     CONNECT_CONFIG_STORAGE_TOPIC: docker-connect-configs
-  #     CONNECT_OFFSET_STORAGE_TOPIC: docker-connect-offsets
-  #     CONNECT_STATUS_STORAGE_TOPIC: docker-connect-status
-  #     CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-  #     CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:28081
-  #     CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-  #     CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry:28081
-  #     CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-  #     CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-  #     CONNECT_ZOOKEEPER_CONNECT: "zookeeper-1:2181"
-  #   networks:
-  #     - bridge
-  
-  # control-center:
-  #   image: confluentinc/cp-enterprise-control-center:latest
-  #   hostname: control-center
-  #   depends_on:
-  #     - kafka-1
-  #   ports:
-  #     - "9021:9021"
-  #   environment:
-  #     CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka-1:9092'
-  #     CONTROL_CENTER_REPLICATION_FACTOR: 1
-  #     PORT: 9021
-  #   networks:
-  #     - bridge
-  
+    
   kafka-monitoring:
     image: obsidiandynamics/kafdrop
     restart: "no"
