--- a/Apache-Kafka/requirements.txt
+++ b/Apache-Kafka/requirements.txt
@@ -1,1 +1,11 @@
+JayDeBeApi==1.2.3
+JPype1==1.5.0
 kafka-python==2.0.2
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
