--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ Search-Engine/Docker/elasticsearch/.venv/
 Search-Engine/prometheus/
 Search-Engine/Shell_Scripts/SSH/.ven/
 .idea
-d
+Search-Engine/Shell_Scripts/SSH/.venv/
